--- a/.github/workflows/qeyd.yml
+++ b/.github/workflows/qeyd.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/yysy/qqreader.git ~/scripts
+          git clone https://github.com/promise821/qq_read.git ~/scripts
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
