--- a/.github/workflows/qeyd.yml
+++ b/.github/workflows/qeyd.yml
@@ -6,42 +6,38 @@ name: 企鹅读书
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0,30 7-22/1 * * *'
+    - cron: '0,30 7-22/1 * * *'
   watch:
     types: started
-
+  repository_dispatch:
+    types: qqreads
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        QQREAD_BODY: ${{ secrets.QQREAD_BODY }}
-        QQREAD_TIMEURL: ${{ secrets.QQREAD_TIMEURL }}
-        QQREAD_TIMEHD: ${{ secrets.QQREAD_TIMEHD }}
-        
     steps:
       - name: Checkout
         run: |
-
           git clone https://github.com/promise821/jd_scripts1207.git ~/scripts
-
-      - name: Use Node.js 12.x
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 10.x
       - name: npm install
-        if: env.QQREAD_TIMEHD
         run: |
           cd ~/scripts
           npm install
       - name: '运行 【企鹅读书】'
-        if: env.QQREAD_TIMEHD
         run: |
-          cd ~/JavaScript
+          cd ~/scripts
           node qqreads.js
         env:
-          
-      #微信酱
+          JKD_COOKIE: ${{ secrets.JKD_COOKIE }}
+          QQREAD_BODY: ${{ secrets.QQREAD_BODY }}
+          QQREAD_TIMEURL: ${{ secrets.QQREAD_TIMEURL }}
+          QQREAD_TIMEHD: ${{ secrets.QQREAD_TIMEHD }}
+          #微信酱
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           #BARK推送
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
@@ -66,4 +62,3 @@ jobs:
              
           ALLIN_KEY: ${{ secrets.ALLIN_KEY }} 
           NOTICE_ID: ${{ secrets.NOTICE_ID }}
-          
