--- a/.github/workflows/笑谱.yml
+++ b/.github/workflows/笑谱.yml
@@ -6,44 +6,60 @@ name: 笑谱
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/30 * * * *'
+    - cron: '*/30 * * * *'
   watch:
     types: started
+  repository_dispatch:
+    types: 笑谱
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        XP_iboxpayHEADER: ${{ secrets.XP_iboxpayHEADER }}
-        XP_CASH: ${{ secrets.XP_CASH }}
-        XP_refreshTOKEN:  ${{ secrets. XP_refreshTOKEN }}
-        XP_live: ${{ secrets.XP_live }}
     steps:
       - name: Checkout
         run: |
-          git clone https://github.com/ziye66666/JavaScript.git ~/JavaScript
-      - name: Use Node.js 12.x
+          git clone https://github.com/ziye66666/JavaScript.git ~/scripts
+      - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 10.x
       - name: npm install
-        if: env.XP_iboxpayHEADER
         run: |
-          cd ~/JavaScript
+          cd ~/scripts
           npm install
       - name: '运行 【笑谱】'
-        if: env.XP_iboxpayHEADER
         run: |
-          cd ~/JavaScript
+          cd ~/scripts
           node Task/iboxpay.js
         env:
+          XP_iboxpayHEADER: ${{ secrets.XP_iboxpayHEADER }}
+          XP_CASH: ${{ secrets.XP_CASH }}
+          XP_refreshTOKEN:  ${{ secrets. XP_refreshTOKEN }}
+          XP_live: ${{ secrets.XP_live }}
           
+          #微信酱
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          #BARK推送
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          #tg推送
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          #钉钉推送
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-
-    
+          #企业微信推送
+          QYWX_KEY: ${{ secrets.QYWX_KEY }}
+          #iGot推送
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
+          #酷推(Cool Push)推送
+          QQ_SKEY: ${{ secrets.QQ_SKEY }}
+          QQ_MODE: ${{ secrets.QQ_MODE }}
+                    #pushplus推送
+          PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
+          PUSH_PLUS_USER: ${{ secrets.PUSH_PLUS_USER }}
+          #万能推
+             
+          ALLIN_KEY: ${{ secrets.ALLIN_KEY }} 
+          NOTICE_ID: ${{ secrets.NOTICE_ID }}
