--- a/.github/workflows/wkzz.yml
+++ b/.github/workflows/wkzz.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jkd 聚看点
+name: wkzz 微客众智自动阅读
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0,30 23,0-15/1 * * *'
+    - cron: '5,35 1-14 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: jkd
+    types: wkzz
 jobs:
   build:
 
@@ -28,12 +28,13 @@ jobs:
         run: |
           cd ~/scripts
           npm install
-      - name: '运行 【聚看点】'
+      - name: '运行 【微客众智自动阅读】'
         run: |
           cd ~/scripts
-          node jkd.js
+          node wkzz.js
         env:
-          JUKAN_BODY: ${{ secrets.JKD_COOKIE }}
+          wkzz_url: ${{ secrets.WKZZ_UEL }}
+          wkzz_hd: ${{ secrets.WKZZ_HD }}
           
           #微信酱
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
