--- a/.github/workflows/Youth_AutoRead3.yml
+++ b/.github/workflows/Youth_AutoRead3.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jkd 聚看点
+name: Youth_AutoRead3 中青浏览boby
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0,30 23,0-15/1 * * *'
+    - cron: '10 15-22 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: jkd
+    types: Youth_AutoRead3
 jobs:
   build:
 
@@ -28,12 +28,12 @@ jobs:
         run: |
           cd ~/scripts
           npm install
-      - name: '运行 【聚看点】'
+      - name: '运行 【中青浏览boby】'
         run: |
           cd ~/scripts
-          node jkd.js
+          node Youth_AutoRead.js
         env:
-          JUKAN_BODY: ${{ secrets.JKD_COOKIE }}
+          YOUTH_READ: ${{ secrets.YOUTH_READ3 }}
           
           #微信酱
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
