--- a/.github/workflows/youth2.yml
+++ b/.github/workflows/youth2.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jkd 聚看点
+name: youth2 中青看点极速版2
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0,30 23,0-15/1 * * *'
+    - cron: '20 0-23 * * *'
   watch:
     types: started
   repository_dispatch:
-    types: jkd
+    types: youth2
 jobs:
   build:
 
@@ -28,12 +28,15 @@ jobs:
         run: |
           cd ~/scripts
           npm install
-      - name: '运行 【聚看点】'
+      - name: '运行 【中青看点极速版2】'
         run: |
           cd ~/scripts
-          node jkd.js
+          node youth2.js
         env:
-          JUKAN_BODY: ${{ secrets.JKD_COOKIE }}
+          YOUTH_HEADER: ${{ secrets.YOUTH_HEADER }}
+          YOUTH_ARTBODY: ${{ secrets.YOUTH_ARTBODY }}
+          YOUTH_REDBODY: ${{ secrets.YOUTH_REDBODY }}
+          YOUTH_TIME: ${{ secrets.YOUTH_TIME }}
           
           #微信酱
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
